2006-01-26    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* configure.ac, Makefile.am: 
	Fixed 1414767. VPATH build failure after CVS checkout. Improved
	xFLAGS processing.

2006-01-16  a3schuur

	* args.c, providerDrv.c, support.c: fixed [ 1407244 ] memory leak
	with args objects
	args objects created by providerDrv.c not garbage collected.
	restructured args.c

2006-01-12    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* man/sfcbd.1.pre.in, man/sfcbstage.1.pre.in, man/sfcbstage.1.pre.in, 
	man/sfcbrepos.1.pre.in, README : 
	Fix for 1404047. Documentation Updates.
	
	* Makefile.am, mofpp.c: 
	Fix for 1404047. MOF preprocessor added to build as now required
	by sfcb{un}stage.

	* sfcbrepos.sh.in, sfcbstage.sh.in, sfcbunstage.sh.in: 
	Fix for 1404047. Added support for alternative namespaces and
	hierarchical class MOF files.

2006-01-10  a3schuur

	* classProviderGz.c, constClass.c: Fixed [ 1386191 ] sfcb memory
	footprint for large schemas too high
	Fixed memory leak in constClass::release Fixed bug in
	classProviderGz.c Changed class cache size from 2 to 10

2006-01-02    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* configure.ac, Makefile.am: 
	Fixed 1395350. Use $srcdir to ensure location-independ builds.
	
2005-12-22    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* args.c, constClass.c, instance.c, objectpath.c: 
	Fixed 1387264. Check for NULL array and pass in the correct pointer to the
	array if not NULL.

	* cimXmlGen.c:
	Also 1387264. Check for NULL array before looking for the element count.

2005-12-20    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* httpComm.c: 
	Related to 1356235. Enhanced tracing and implemented an explicit
	commClose function.
	
	* httpAdapter.c: 
	Related to 1356235. Made the error responses more graceful in respect
	to the client. I.e., keep the connection open for some kind of errors.

2005-12-19    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* cimXmlGen.c: 